# dale-rs

./: Cargo.toml
dale/: Cargo.toml
dale-derive/: Cargo.toml
dale-derive/src/: into_outcome.rs  into_service.rs  lib.rs  shared.rs
dale-extensions/: Cargo.toml
dale-extensions/src/: lib.rs
dale-fs/: Cargo.toml
dale-fs/src/: fs.rs  lib.rs  node.rs
dale-http/: Cargo.toml
dale-http-cookies/: Cargo.toml
dale-http-cookies/examples/: cookie.rs
dale-http-cookies/src/: cookie_jar.rs  lib.rs  middleware.rs  request.rs
dale-http-negotiate/: Cargo.toml
dale-http-negotiate/examples/: negotiate.rs
dale-http-negotiate/src/: request.rs
dale-http-rest/: Cargo.toml
dale-http-rest/examples/: rest.rs
dale-http-rest/src/: controller.rs  filters.rs  handlers.rs  lib.rs  list.rs  method.rs  model.rs  route.rs  router.rs
dale-http-session/: Cargo.toml
dale-http-session/src/: lib.rs  manager.rs  middleware.rs  request.rs  session.rs  store.rs
dale-http/examples/: encoder.rs  http.rs  router.rs  simple.rs  static.rs
dale-http/src/: body.rs  error.rs  from_request.rs  hyper.rs  lib.rs  modifier.rs  modifiers.rs  mount.rs  reply_impl.rs  request_ext.rs  service_ext.rs  types.rs
dale-http/src/common/: buf.rs  to_string.rs
dale-http/src/encoder/: decoder.rs  encoder.rs  error.rs  impls.rs  mod.rs  reply.rs
dale-http/src/filters/: body.rs  encode.rs  header.rs  method.rs  misc.rs  mod.rs  mount.rs  url.rs
dale-http/src/fs/: file_conditional.rs  file_options.rs  fs.rs  mod.rs  node.rs
dale-http/src/router/: decorated.rs  mod.rs  params.rs  route.rs  router.rs  routing.rs
dale-runtime/: Cargo.toml
dale-runtime/src/: executor.rs  fs.rs  lib.rs
dale-runtime/src/tokio/: executor.rs  fs.rs  mod.rs
dale/examples/: derive.rs
dale/src/: boxed.rs  future_ext.rs  impls.rs  into_outcome.rs  into_result.rs  into_service.rs  lib.rs  macros.rs  middleware.rs  middleware_ext.rs  outcome.rs  outcome_impl.rs  service.rs  service_ext.rs  types.rs
dale/src/combinators/: err_into.rs  map_err.rs  mod.rs  or.rs  require.rs  shared.rs  then.rs  unify.rs  unpack.rs  unpack_one.rs
dale/src/filters/: and.rs  and_then.rs  generic.rs  mod.rs
