[package]
edition = "2021"
name = "dale-extensions"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["http"]

[dependencies]
dale = {path = "../dale"}
extensions = {version = "0.2", optional = true}
http = {version = "0.2", optional = true}
pin-project-lite = "0.2"
