[package]
name = "dale-http-cookies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dale = { path = "../dale" }
dale-http = { path = "../dale-http" }
cookie = { version = "0.17", features = ["secure"] }
pin-project-lite = { version = "0.2" }
tracing = { version = "0.1" }
parking_lot = "0.12"

[dev-dependencies]
hyper = { version = "0.14", features = ["server", "http1", "runtime"] }
tokio = { version = "1", features = ["rt", "net", "macros"] }
dale-http = { path = "../dale-http", features = ["hyper"] }
