[package]
name = "dale-http-negotiate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dale = { path = "../dale" }
dale-http = { path = "../dale-http" }

[dev-dependencies]
hyper = { version = "0.14", features = ["server", "http1", "runtime"] }
tokio = { version = "1", features = ["rt", "net", "macros"] }
dale-http = { path = "../dale-http", features = ["hyper"] }
