[package]
name = "dale-http-rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dale-http = { path = "../dale-http", features = ["router"] }
dale = { path = "../dale" }

async-trait = { version = "0.1" }
