[package]
name = "dale-http-rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dale-http = { path = "../dale-http", features = ["router"] }
dale = { path = "../dale" }

async-trait = { version = "0.1" }
serde = { version = "1", features = ["derive"] }


[dev-dependencies]
hyper = { version = "0.14", features = ["server", "http1", "runtime"] }
tokio = { version = "1", features = ["rt", "net", "macros", "sync"] }
dale-http = { path = "../dale-http", features = ["hyper", "json"] }
serde_json = { version = "1" }
uuid = { version = "1.4", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
