[package]
name = "dale-http-session"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dale = { path = "../dale" }
dale-http = { path = "../dale-http" }
async-trait = { version = "0.1" }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
odu-value = { git = "https://github.com/kildevaeld/odu-rs", features = [
    "serde",
] }
